mejoras en seguridad

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular2-datepicker": "^1.0.4",
     "angular2-flash-messages": "^1.0.8",
     "angular2-ladda": "^1.2.1",
+    "angular2-password-strength-bar": "0.0.2",
     "animate.css": "3.1.1",
     "autonumeric": "^4.0.0-beta.20",
     "bootstrap": "^3.3.7",
@@ -52,6 +53,7 @@
     "ng2-charts": "^1.6.0",
     "ng2-drag-drop": "^2.6.0",
     "ng2-file-drop": "^1.1.0",
+    "ng2-password-strength-bar": "^1.1.2",
     "ng2-select2": "^1.0.0-beta.10",
     "ng2-toastr": "^4.1.2",
     "ngx-bootstrap": "^1.8.1",
